src/test/resources/entity_test/invalid/Employee1.entity
Employee1 // no { } 
    id : integer {@Id};  